# zeko

./: .gitignore  .gitmodules  404.html  MINA_COMMIT  Makefile  README.md  flake.nix  index.html  opam.export  package-lock.json  package.json  search-index.json  sequencer.Dockerfile  sequencer.md  sitemap.xml  tsconfig.json  zeko
.github/: CODEOWNERS
assets/css/: styles.9d2fee79.css
assets/js/: 0aeccac2.928fd840.js  17896441.9c2636bc.js  1a4e3797.5ba903b1.js  1eaf136a.c94c1d43.js  2049cb81.8295193a.js  2049cb81.d8ff60e1.js  443.1e0287c7.js  525.9a799ffa.js  5e95c892.b557b9fd.js  7586d21f.2b4e6a10.js  772.f3c183fd.js  86116682.a5e3713f.js  86116682.ec6f2a99.js  92018a42.acb7a5dd.js  933ba403.3099bdff.js  935f2afb.ad347cc4.js  935f2afb.dea76fd3.js  a7bd4aaa.49802817.js  a94703ab.5b66cc51.js  c377a04b.bb0847a3.js  e01c3821.6c322393.js  main.07477bab.js  main.4662b462.js  main.667e976c.js  runtime~main.502cdf62.js  runtime~main.678f0b1d.js
compiled/node_bindings/: plonk_wasm.cjs  plonk_wasm.d.cts  plonk_wasm_bg.wasm  plonk_wasm_bg.wasm.d.ts
compiled/web_bindings/: plonk_wasm.d.ts  plonk_wasm.js  plonk_wasm_bg.wasm  plonk_wasm_bg.wasm.d.ts  snarky_js_web.bc.runtime.js
crypto/bindings/: curve.ts  field.ts  vector.ts
da-contracts/: README.md  hardhat.config.ts  package.json  test-validators.json
da-contracts/contracts/: DataAvailability.sol  DataAvailabilityProxy.sol  Endianness.sol  FieldBytes.sol  State.sol  Types.sol
da-contracts/scripts/: deploy.ts
da-contracts/test/: batches.test.ts  fixtures.ts  multisig.test.ts
da-contracts/utils/: mina.ts
da-layer/: index.html
da-layer/contracts/: .gitignore  (+5 more)
da-validator/: Cargo.toml  README.md  package-lock.json  package.json
da-validator/src/: config.ts  daLayer.ts  index.ts  main.rs  signer.rs  utils.ts
da-validator/src/artifacts/: DataAvailability.json
da-validator/src/da_layer/: DataAvailability.json  mod.rs
design/: index.html
for_end_users/: index.html
for_network_operators/: index.html
for_zkapp_developers/: index.html
js/: snarky-class-spec.js  wrapper.js
lib/: provable-generic.ts  provable-snarky.ts
nix/: impure-shell.nix  ocaml.nix
ocaml/: dune  overrides.js
rollup-testing/: package-lock.json  package.json  tsconfig.json
scripts/: build-snarkyjs-node-artifacts.sh  build-snarkyjs-node.sh  update-snarkyjs-bindings.sh
search/: index.html
sequencer/: Cargo.toml  genesis-accounts.json  index.html  package-lock.json  package.json  tsconfig.json
sequencer/src/: L1.ts  config.ts  daLayer.ts  genesis.ts  gql.rs  index.ts  ledger.rs  main.rs  rollup.ts  transaction.rs  typechain-types  utils.ts
sequencer/src/da_layer/: mod.rs
sequencer/src/gql/: context.rs  index.ts  mod.rs  mutations.ts  queries.ts  types.rs
sequencer/src/gql/mutations/: mod.rs
sequencer/src/gql/queries/: mod.rs
sequencer/src/mina_daemon/: mod.rs  query.graphql  schema.graphql
sequencer/src/proving/: command.ts  commit.ts  worker.ts
sequencer/tests/: payment.test.ts  run.sh  status.test.ts  utils.ts
src/: ActionsZkapp.test.ts  ActionsZkapp.ts  ExampleToken.ts  MerkleMapQueue.test.ts  MerkleMapQueue.ts  MerkleTreeArray.test.ts  MerkleTreeArray.ts  ZekoBridge.test.ts  ZekoBridge.ts  config.ts  dune-project  index.ts  poseidon.ts  snarky.d.ts  snarky.js  utils.ts
src/app/zeko/circuits/: ase.ml  ase.mli  ase_lengthed.ml  bridge_inner.ml  bridge_state.ml  design.md  dune  folder.ml  folder.mli  inner.ml  inner.mli  inner_rules.ml  macroslot.ml  macroslot.mli  outer.ml  outer_rules.ml  rollup_state.ml  rule_action_witness.ml  rule_bridge_finalize_deposit.ml  rule_commit.ml  rule_inner_sync.ml  rule_peaceful_transfer.ml  wrapper.ml  zeko_util.ml  zeko_util.mli  zkapps_rollup.ml
src/app/zeko/circuits/design/: README.md  bridge-spec.md  pausing.md  rollup-centralized-spec.md  rollup-decentralized-spec.md  specs.md  upgrading.md
src/app/zeko/da-layer/da_utils/: Cargo.toml  da_utils.c  da_utils.ml  dune
src/app/zeko/da-layer/da_utils/src/: DataAvailability.json  DataAvailabilityProxy.json  da_layer.rs  lib.rs
src/app/zeko/da_layer/lib/: batch.ml  client.ml  diff.ml  dune  node.ml  rpc.ml
src/app/zeko/sequencer/: .gitignore  README.md  cli.ml  committer.ml  deploy.ml  dump_db.ml  dune  run.ml
src/app/zeko/sequencer/archive_relay/: dune  run.ml
src/app/zeko/sequencer/lib/: analytics.ml  archive.ml  commands_db.ml  committer.ml  da_layer.ml  deploy.ml  dune  executor.ml  gql.ml  gql_client.ml  kvdb.ml  rollback_checker.ml  transfers_memory.ml  utils.ml  verifier.ml  zeko_sequencer.ml
src/app/zeko/sequencer/tests/: testing_accounts.json
src/app/zeko/sequencer/tests/local_network/: dune  gql.ml  run.ml  state.ml
src/app/zeko/sequencer/tests/testing_ledger/: README.md  dune  gql.ml  run.ml  state.ml
src/app/zeko/tests/: actions.ml  compile_circuits.ml  dune  tokens.ml  transfers.ml
src/app/zkapps_examples/rollup/sequencer/: .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  archive.ml  cstub.c  da_layer.ml  deploy.ml  dune  gql.ml  run.ml  sequencer.ml  server.ml  test.ml  zeko_sequencer.ml
src/app/zkapps_examples/rollup/sequencer/archive_relay/: dune  run.ml
src/app/zkapps_examples/rollup/sequencer/lib/: da_layer.ml  deploy.ml  dune  gql.ml  gql_client.ml  rollback_checker.ml  transfers_memory.ml  zeko_sequencer.ml
src/app/zkapps_examples/rollup/sequencer/parallel_merge/: dune  parallel_merge.ml
src/app/zkapps_examples/rollup/sequencer/tests/: testing_accounts.json
src/app/zkapps_examples/rollup/sequencer/tests/local_network/: dune  gql.ml  run.ml
src/lib/consensus/: consensus.ml  consensus_intf.ml  constants.ml  dune  epoch.ml  global_slot.ml  intf.ml  proof_of_stake.ml  proof_of_stake_fuzzer.ml  proof_of_stake_intf.ml  slot.ml  stake_proof.ml
src/lib/merkle_mask/: dune  maskable_merkle_tree.ml  masking_merkle_tree.ml
src/lib/transaction_snark/test/zkapps_examples/rollup/: dune  rollup.ml
src/lib/zkapps_examples/rollup/: DESIGN.md  dune  zkapps_rollup.ml
ts-sequencer/: README.md  codegen.ts  package-lock.json  package.json  schema.graphql  tsconfig.json
(+317 files in other folders)
