[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
bs58 = "0.4.0"
ethers = { version = "2.0.4", features = ["ws"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
rand = "0.8.5"
sha2 = "0.10.6"
tokio = { version = "1.28.0", features = ["full"] }
log = "0.4.17"
clap = { version = "4.2.7", features = ["derive", "env"] }

