[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.7"
async-graphql-poem = "5.0.7"
clap = { version = "4.2.7", features = ["derive"] }
ethers = { version = "2.0.4" }
graphql_client = { version = "0.12.0", features = ["reqwest"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0", tag = "0.1.0" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", tag = "0.1.0", version = "0.1.0" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", tag = "0.1.0", version = "0.1.0" }
poem = "1.3.55"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.160"
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
