(library
 (name merkle_mask)
 (public_name merkle_mask)
 (library_flags -linkall)
 (libraries
   ;; opam libraries
   base.caml
   async_kernel
   sexplib0
   core_kernel.uuid
   integers
   bitstring
   core_kernel
   yojson
   base.base_internalhash_types
   stdio
   ;; local libraries
   debug_assert
   merkle_ledger
   visualization
   mina_stdlib
   direction
 )
 (preprocess
  (pps
    ppx_compare
    ppx_deriving.show
    ppx_deriving_yojson
    ppx_jane
    ppx_version
 ))
 (instrumentation (backend bisect_ppx))
 (synopsis "Implementation of Merkle tree masks"))
