(library
 (name zkapps_rollup)
 (libraries
   ;; opam libraries
   base
   core_kernel
   ;; local libraries
   allocation_functor
   cache_dir
   consensus
   crypto_params
   currency
   data_hash_lib
   genesis_constants
   kimchi_backend
   kimchi_backend_common
   kimchi_backend.pasta
   kimchi_backend.pasta.basic
   kimchi_pasta
   logger
   mina_base
   mina_state
   mina_transaction_logic
   pasta_bindings
   pickles
   pickles.backend
   pickles_base
   pickles_types
   ppx_version.runtime
   random_oracle
   sgn
   signature_lib
   snark_params
   snarky.backendless
   transaction_snark
   tuple_lib
   zkapps_examples
 )
 (inline_tests)
 (instrumentation (backend bisect_ppx))
 (preprocess
  (pps ppx_snarky ppx_mina ppx_version ppx_jane ppx_compare)))
