[package]
name = "da_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "da_utils"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ark-ff = "0.4.2"
bs58 = "0.4.0"
ethers = { version = "2.0.4", features = ["ws"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems", version = "0.1.0" }
rand = "0.8.5"
sha2 = "0.10.6"
tokio = { version = "1.28.0", features = ["full"] }
