(executable
 (name server)
 (libraries
  zkapps_rollup
  ;; mina ;;
  mina_base
  mina_base.import
  mina_ledger
  mina_transaction
  mina_transaction_logic
  mina_state
  mina_wire_types
  mina_numbers
  transaction_snark
  transaction_protocol_state
  genesis_constants
  genesis_ledger
  consensus
  staged_ledger_diff
  with_hash
  currency
  signature_lib
  sgn
  data_hash_lib
  fields_derivers_zkapps
  snark_params
  unsigned_extended
  pickles
  pickles.backend
  pickles_types
  kimchi_backend.pasta
  kimchi_backend.pasta.basic
  ;; opam libraries ;;
  dispatch
  cohttp
  cohttp-async
  integers
  core
  core_kernel
  async_kernel
  async
  async_unix
  core_unix.command_unix
  base
  base.caml
  yojson
  ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_jane))
  (modules server zeko_sequencer))