(executable
 (name run)
 (libraries
  zkapps_rollup
  sequencer_lib
  ;; mina ;;
  mina_base
  mina_base.import
  mina_ledger
  mina_transaction
  mina_transaction_logic
  mina_state
  mina_wire_types
  mina_numbers
  mina_graphql
  mina_signature_kind
  graphql_wrapper
  transaction_snark
  transaction_protocol_state
  transaction_witness
  genesis_constants
  genesis_ledger
  consensus
  staged_ledger_diff
  with_hash
  currency
  signature_lib
  sgn
  fields_derivers.graphql
  fields_derivers_zkapps
  snark_params
  unsigned_extended
  pickles
  pickles.backend
  pickles_types
  transition_frontier
  transition_frontier_base
  base58_check
  graphql_lib
  data_hash_lib
  sync_status
  daemon_rpcs
  rocksdb
  snarky.intf
  snarky.backendless
  key_value_database
  random_oracle
  random_oracle_input
  init
  cli_lib
  ;; opam libraries ;;
  uri
  re2
  stdio
  graphql
  graphql-async
  graphql_parser
  integers
  core
  core_kernel
  async_kernel
  async
  async_unix
  base
  base.caml
  yojson
  sexplib
  sexplib0
  fileutils
  ppx_inline_test.config
  cohttp
  cohttp-async
  core_unix.command_unix)
 (preprocess
  (pps ppx_jane ppx_mina))
 (modules run state gql))
