(library
 (name rollup)
 (libraries
   ;; opam libraries
   async
   async_kernel
   async_unix
   base
   core
   core_kernel
   ppx_inline_test.config
   yojson
   ;; local libraries
   cache_dir
   consensus
   currency
   data_hash_lib
   genesis_constants
   genesis_ledger
   kimchi_backend
   kimchi_backend.pasta
   kimchi_backend.pasta.basic
   kimchi_pasta
   merkle_ledger
   mina_base
   mina_base.import
   mina_ledger
   mina_numbers
   mina_state
   mina_transaction
   mina_transaction_logic
   mina_wire_types
   one_or_two
   pasta_bindings
   pickles
   pickles.backend
   pickles_types
   promise
   quickcheck_lib
   random_oracle
   random_oracle_input
   sexplib0
   sgn
   signature_lib
   snark_params
   snarky.backendless
   staged_ledger_diff
   test_util
   transaction_protocol_state
   transaction_snark
   transaction_snark_tests
   with_hash
   zkapps_examples
   zkapps_rollup
   )
  (inline_tests)
  (preprocess
    (pps ppx_snarky ppx_version ppx_jane))
  (instrumentation (backend bisect_ppx))
  (flags
    (:standard -w a -warn-error +a))
  )
